--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A simple typscript and graphql api",
   "main": "server.js",
   "scripts": {
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,16 +20,21 @@
   "author": "Lone Wolf",
   "license": "MIT",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.24",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "@types/qs": "^6.9.7",
+    "@types/range-parser": "^1.2.4",
+    "@types/serve-static": "^1.13.10",
+    "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.7.1",
+    "apollo-server-core": "^3.6.7",
     "apollo-server-express": "^3.6.7",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
